# streamx

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.yaml  setup.sh
cmake/: dependence.cmake  dependencies.cmake
src/: CMakeLists.txt  config.cpp  main.cpp  pipeline.cpp  pipeline.h
src/jetson/: CMakeLists.txt  main.cpp
src/rk3588/: CMakeLists.txt  config.h  main.cpp  pipeline.h
tests/jetson/: test_on_jetson.cpp
tests/rk3588/: CMakeLists.txt
