# ------------------------------------------------------------
# module name
# ------------------------------------------------------------
set(NAME test_streamx_rk3588)

# ------------------------------------------------------------
# sources
# ------------------------------------------------------------
file(GLOB TEST_SRCS *.cpp)

# ------------------------------------------------------------
# build on rk3588
# ------------------------------------------------------------
add_executable(${NAME} ${TEST_SRCS})

target_link_libraries(${NAME} PRIVATE toolkitx vcodecx::rkffmpeg rtspx yaml-cpp)
