# ------------------------------------------------------------
# name
# ------------------------------------------------------------
set(NAME test_streamx_rk3588)

# ------------------------------------------------------------
# sources
# ------------------------------------------------------------
file(GLOB TEST_SRCS *.cpp)

# ------------------------------------------------------------
# build
# ------------------------------------------------------------
add_executable(${NAME} ${TEST_SRCS})

target_link_libraries(${NAME} PRIVATE yaml-cpp maixos::toolkitx maixos::vcodecx::rkffmpeg maixos::rtspx)
