# ------------------------------------------------------------
# name
# ------------------------------------------------------------
set(NAME test_on_rk3588)

# ------------------------------------------------------------
# sources
# ------------------------------------------------------------
file(GLOB TEST_SRCS *.cpp)

# ------------------------------------------------------------
# build
# ------------------------------------------------------------
add_executable(${NAME} ${TEST_SRCS})

target_link_libraries(${NAME} PRIVATE common yaml-cpp maixos::vcodecx::rkffmpeg)
